--- a/index.css
+++ b/index.css
@@ -1,4 +1,11 @@
-  
+  body{
+    /* background-image: url("https://static.ifood.com.br/digital-catalog/2f747304-1402-4d20-b7d5-727be0ee2d33/images/dlvprecinhodesktop1920x1080png-fd8a3669"); */
+    background-image: url("https://static.ifood.com.br/digital-catalog/2f747304-1402-4d20-b7d5-727be0ee2d33/images/dlvprecinhocardapio1300x305png-2b706b8e");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-color: rgb(214, 35, 0)
+  }
+
   @media (min-width: 768px) {
     .bd-placeholder-img-lg {
       font-size: 3.5rem;
@@ -7,9 +14,9 @@
 
   .container{
     position:fixed;
-    top: 25%;
+    top: 40%;
     left: 35%;
-    justify-content: center;
+    justify-content: center;        
   }
 
   .b-example-divider {
@@ -48,3 +55,20 @@
     white-space: nowrap;
     -webkit-overflow-scrolling: touch;
   }
+
+  .text-header {
+    font-size: 24px;
+    font-family: Flame;
+    color: rgb(80, 35, 20);
+    font-weight: bold;
+  }
+
+  .card-body {
+    background-color: #fffacd;
+  }
+
+  /* .card-header {
+    color: rgb(255, 255, 255);
+    background-color: rgb(214, 35, 0);
+  } */
+
