--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
-  body{
-    /* background-image: url("https://static.ifood.com.br/digital-catalog/2f747304-1402-4d20-b7d5-727be0ee2d33/images/dlvprecinhodesktop1920x1080png-fd8a3669"); */
+  body{    
     background-image: url("https://static.ifood.com.br/digital-catalog/2f747304-1402-4d20-b7d5-727be0ee2d33/images/dlvprecinhocardapio1300x305png-2b706b8e");
     background-repeat: no-repeat;
     background-size: 100%;
@@ -19,13 +18,13 @@
     justify-content: center;        
   }
 
-  .b-example-divider {
+  /* .b-example-divider {
     height: 3rem;
     background-color: rgba(0, 0, 0, .1);
     border: solid rgba(0, 0, 0, .15);
     border-width: 1px 0;
     box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-  }
+  } */
 
   .b-example-vr {
     flex-shrink: 0;
@@ -56,19 +55,15 @@
     -webkit-overflow-scrolling: touch;
   }
 
-  .text-header {
+  .card-header {
     font-size: 24px;
     font-family: Flame;
     color: rgb(80, 35, 20);
     font-weight: bold;
+    /* background-color: rgb(214, 35, 0) */
   }
 
-  .card-body {
-    background-color: #fffacd;
+  .alert-hide {    
+    display: none;    
+    text-align: center;    
   }
-
-  /* .card-header {
-    color: rgb(255, 255, 255);
-    background-color: rgb(214, 35, 0);
-  } */
-
